--- a/home.html
+++ b/home.html
@@ -12,6 +12,14 @@
         <meta />
     </head>
     <body>
+        <form>
+            <input type="file" accept=".pdf" />
+            <input required placeholder="name" type="text" />
+            <input required placeholder="lastName" type="text" />
+            <input required placeholder="userName" type="email" />
+            <input minlength="10" required placeholder="password" type="password" />
+            <input type="submit" value="Create Account" />
+        </form>
         <h1>Hello this is my website!</h1>
         <h2>Hello this is my website!</h2>
         <h3>Hello this is my website!</h3>
@@ -39,5 +47,6 @@
         <p>My name is <abbr title="choi ji seong">CJS</abbr></p>
         <code>Hello, World!</code>
         <cite>Hello, World!</cite>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/42QVtR1PBcM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
