--- a/home.html
+++ b/home.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <form>
+            <label for="profile">Profile Photo</label>
+            <input id="profile" type="text" />
+            <br />
             <input type="file" accept=".pdf" />
             <input required placeholder="name" type="text" />
             <input required placeholder="lastName" type="text" />
