--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
         <meta name="description" content="this is website" />
         <meta charset="utf-8" />
         <meta />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <form>
