--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <input minlength="10" required placeholder="password" type="password" />
             <input type="submit" value="Create Account" />
         </form>
-        <h1>Hello this is my website!</h1>
+        <h1 class="blueTitle">Hello this is my website!</h1>
         <h2>Hello this is my website!</h2>
         <h3>Hello this is my website!</h3>
         <h4>Hello this is my website!</h4>
