--- a/index.html
+++ b/index.html
@@ -5,25 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            margin: 0;
+            background-color: thistle;
+        }
         div{
             height: 150px;
-            background-color: tomato;
+            background-color: whitesmoke;
             width: 150px;
         }
         span{
             background-color: turquoise;
         }
+        html{
+            background-color: tomato;
+        }
     </style>
 </head>
 <body>
     <div>
-
+1
     </div>
     <div>
-
+1
     </div>
     <div>
-
+1
     </div>
     <span>Hello</span>
     <span>Hello</span>
