--- a/index.html
+++ b/index.html
@@ -5,39 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html{
+            background-color: tomato;
+        }
         body{
-            margin: 0;
+            margin: 5px;
             background-color: thistle;
+            padding: 20px;
         }
         div{
             height: 150px;
-            background-color: whitesmoke;
             width: 150px;
-        }
-        span{
-            background-color: turquoise;
-        }
-        html{
-            background-color: tomato;
+            background-color: whitesmoke;
+            padding: 40px;
         }
     </style>
 </head>
 <body>
-    <div>
-1
-    </div>
-    <div>
-1
-    </div>
-    <div>
-1
-    </div>
-    <span>Hello</span>
-    <span>Hello</span>
-    <span>Hello</span>
-    <a href="#">link</a>
-    <span>Hello</span>
-    <p>ppppp</p>
-    <img src="" alt="image">
+    <div>123</div>
 </body>
 </html>
