--- a/gome.html
+++ b/gome.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 98vh;
+        }
+        div{
+           width: 50px; 
+           height: 50px;
+           background-color: teal;
+        }
+        #second{
+            background-color: wheat;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+
+    </div>
+    <div id="second">
+
+    </div>
+    <div>
+
+
+    </div>
 </body>
 </html>
