--- a/gome.html
+++ b/gome.html
@@ -6,31 +6,26 @@
     <title>Document</title>
     <style>
         body{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             height: 98vh;
+            margin: 50px;
         }
-        div{
-           width: 50px; 
-           height: 50px;
-           background-color: teal;
+        input{
+            border: 1px solid wheat;
         }
-        #second{
-            background-color: wheat;
+        input:required{
+            border-color:purple;
+        }
+        input[type="password"]{
+            background-color: thistle;
         }
     </style>
 </head>
 <body>
     <div>
-
-    </div>
-    <div id="second">
-
-    </div>
-    <div>
-
-
+        <form action="">
+            <input type="text" placeholder="username" />
+            <input type="password" required placeholder="password" />
+        </form>
     </div>
 </body>
 </html>
