--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to JiseongTalk</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="status-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span>LG U+</span>
-            <!--To Do : WiFi Icon-->
+            <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column js-clock">
             <span>00:00</span>
-            <span class="battery">Battery</span>
-            <!--battery icons-->
-            <!--Lightning Icon-->
         </div>
-        <div class="status-bar__column"></div>
+        <div class="status-bar__column">
+            <span class="battery">Battery</span>
+            <i class="fas fa-battery-three-quarters fa-lg"></i>
+            <i class="fas fa-bolt"></i>
+        </div>
     </div>
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to JiseongTalk</h1>
+        <p class="welcome-header__text">If you have a Jiseong Account, log in with your email or phone number.</p>
+    </header>
+    <form action="" id="login-form">
+        <input type="text" placeholder="Email or phone number" />
+        <input type="password" placeholder="Password" />
+        <input type="submit" value="Log In" />
+    </form>
+    <a href="#">Find Jiseong Account or Password</a>
     <script src="clock.js"></script>
     <script src="battery.js"></script>
+    <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
 </body>
 </html>
