--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h1 class="welcome-header__title">Welcome to JiseongTalk</h1>
         <p class="welcome-header__text">If you have a Jiseong Account, log in with your email or phone number.</p>
     </header>
-    <form action="" id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number" />
+        <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In" />
+        <a href="#">Find Jiseong Account or Password</a>
     </form>
-    <a href="#">Find Jiseong Account or Password</a>
     <script src="clock.js"></script>
     <script src="battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
