--- a/friends.html
+++ b/friends.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Friends - JiseongTalk</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    Hello this is Friends.html
-    <script src="profile.js"></script>
+    <div class="status-bar">
+        <div class="status-bar__column">
+            <span>LG U+</span>
+            <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__column js-clock">
+            <span>00:00</span>
+        </div>
+        <div class="status-bar__column">
+            <span class="battery">Battery</span>
+            <i class="fas fa-battery-three-quarters fa-lg"></i>
+            <i class="fas fa-bolt"></i>
+        </div>
+    </div>
+
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
+                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>          
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a>
+            </li>
+        </ul>
+    </nav>
+    <script src="clock.js"></script>
+    <script src="battery.js"></script>
+    <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
 </body>
 </html>
