add some anchor

--- a/friends.html
+++ b/friends.html
@@ -37,6 +37,16 @@
         </div>
     </header>
 
+    <a id="friends-display-link" href="">
+        <i class="fas fa-info-circle"></i>
+        Friend's Names Display
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <div class="user-component">
+        
+    </div>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
