--- a/friends.html
+++ b/friends.html
@@ -44,7 +44,15 @@
     </a>
 
     <div class="user-component">
-        
+        <div class="user-component__column">
+            <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
+            <div class="user-component__text">
+                <h4 class="user-component__title">JiseongChoi</h4>
+            </div>
+        </div>
+        <div class="user-component__column">
+
+        </div>
     </div>
 
     <nav class="nav">
