--- a/friends.html
+++ b/friends.html
@@ -48,6 +48,7 @@
             <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
             <div class="user-component__text">
                 <h4 class="user-component__title">JiseongChoi</h4>
+                <h6 class="user-component__subtitle">Back to the BASICS</h6>
             </div>
         </div>
         <div class="user-component__column">
