--- a/friends.html
+++ b/friends.html
@@ -42,19 +42,20 @@
         Friend's Names Display
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
+    <main>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img class="user-component-avatar user-component-avatar--xl" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
+                <div class="user-component__text">
+                    <h4 class="user-component__title">JiseongChoi</h4>
+                    <h6 class="user-component__subtitle">Back to the BASICS</h6>
+                </div>
+            </div>
+            <div class="user-component__column">
 
-    <div class="user-component">
-        <div class="user-component__column">
-            <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
-            <div class="user-component__text">
-                <h4 class="user-component__title">JiseongChoi</h4>
-                <h6 class="user-component__subtitle">Back to the BASICS</h6>
             </div>
         </div>
-        <div class="user-component__column">
-
-        </div>
-    </div>
+    </main>
 
     <nav class="nav">
         <ul class="nav__list">
