--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,7 @@
         Friend's Names Display
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-    <main>
+    <main class="friends-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img class="user-component-avatar user-component-avatar--xl" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
@@ -53,6 +53,25 @@
             </div>
             <div class="user-component__column">
 
+            </div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img class="user-component-avatar user-component-avatar--sm" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Channel</h4>
+                        <!--h6 class="user-component__subtitle">Back to the BASICS</h6-->
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
             </div>
         </div>
     </main>
