--- a/friends.html
+++ b/friends.html
@@ -64,7 +64,7 @@
                 <div class="user-component__column">
                     <img class="user-component-avatar user-component-avatar--sm" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Channel</h4>
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                         <!--h6 class="user-component__subtitle">Back to the BASICS</h6-->
                     </div>
                 </div>
