add the alert time

--- a/chats.html
+++ b/chats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - JiseongTalk</title>
+    <title>Chats - JiseongTalk</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -23,10 +23,13 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span>
                 <i class="fas fa-search fa-lg"></i>
+            </span>
+            <span>
+                <i class="far fa-comment-dots fa-lg"></i>
             </span>
             <span>
                 <i class="fas fa-music fa-lg"></i>
@@ -36,42 +39,18 @@
             </span>
         </div>
     </header>
-
-    <a id="friends-display-link" href="">
-        <i class="fas fa-info-circle"></i>
-        Friend's Names Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-    <main class="friends-screen">
+    
+    <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img class="user-component-avatar user-component-avatar--xl" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
+                <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
                 <div class="user-component__text">
-                    <h4 class="user-component__title">JiseongChoi</h4>
-                    <h6 class="user-component__subtitle">Back to the BASICS</h6>
+                    <h4 class="user-component__title">JiseongTalk</h4>
+                    <h6 class="user-component__subtitle">Please check My Account Info</h6>
                 </div>
             </div>
             <div class="user-component__column">
-
-            </div>
-        </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img class="user-component-avatar user-component-avatar--sm" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                        <!--h6 class="user-component__subtitle">Back to the BASICS</h6-->
-                    </div>
-                </div>
-                <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
+                <span class="alert">00:00</span>
             </div>
         </div>
     </main>
@@ -79,12 +58,12 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>          
+                <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>          
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification">1</span>
-                    <i class="far fa-comment fa-2x"></i>
+                    <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
