--- a/chats.html
+++ b/chats.html
@@ -50,7 +50,8 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <span class="alert">00:00</span>
+                <span class="alert user-component__time">00:00</span>
+                <div class="badge badge-sm">1</div>
             </div>
         </div>
     </main>
@@ -62,7 +63,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
@@ -77,8 +78,8 @@
             </li>
         </ul>
     </nav>
-    <script src="clock.js"></script>
-    <script src="battery.js"></script>
+    <script src="javascript/clock.js"></script>
+    <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
 </body>
 </html>
