--- a/friends.html
+++ b/friends.html
@@ -69,8 +69,10 @@
                     </div>
                 </div>
                 <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
+                    <div>
+                        <span>2</span>
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -83,7 +85,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
@@ -98,8 +100,8 @@
             </li>
         </ul>
     </nav>
-    <script src="clock.js"></script>
-    <script src="battery.js"></script>
+    <script src="javascript/clock.js"></script>
+    <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
 </body>
 </html>
