--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <input type="submit" value="Log In" />
         <a href="#">Find Jiseong Account or Password</a>
     </form>
-    <script src="clock.js"></script>
-    <script src="battery.js"></script>
+    <script src="javascript/clock.js"></script>
+    <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
 </body>
 </html>
