--- a/find.html
+++ b/find.html
@@ -56,6 +56,28 @@
         </div>
         <div class="recommended-friends">
             <h6 class="recommended-friends__title">Recommended Friends</h6>
+            <span>You have no recommended friends.</span>
+        </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i> </span>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#JISEONG</h5>
+                    <h6 class="open-post__hashtags">#web#Developer#friends</h6>
+                    <div class="open-post__members">
+                        <img src="https://jiseong-choi.github.io/react-portfolio/static/media/KakaoTalk_20201209_160720642.c6758f1b.jpg" />
+                        <span class="open-post__member-count">999 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+
+                </div>
+            </div>
         </div>
     </main>
 
