i need some help ToT i am tired

--- a/find.html
+++ b/find.html
@@ -75,7 +75,12 @@
                     </div>
                 </div>
                 <div class="open-post__column">
-
+                    <div class="open-post__photo">
+                        <img src="https://www.newsinside.kr/news/photo/201711/477198_321728_2453.jpg" alt="">
+                        <div class="open-post__heart-count">
+                            <i class="fas fa-heart fa-xs"></i> <span>999</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
