--- a/find.html
+++ b/find.html
@@ -30,26 +30,28 @@
             </span>
             <span class="screen-header__icons__dot">
                 <span class="nav__dott"></span>
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html">
+                    <i class="fas fa-cog fa-lg"></i>
+                </a>
             </span>
         </div>
     </header>
     
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fas fa-qrcode"></i>
                 <span>QR code</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-address-book"></i>
                 <span>Add by<br /> Contacts</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fas fa-hand-middle-finger"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-envelope"></i>
                 <span>Invite</span>
             </div>
