--- a/friends.html
+++ b/friends.html
@@ -31,8 +31,11 @@
             <span>
                 <i class="fas fa-music fa-lg"></i>
             </span>
-            <span>
-                <i class="fas fa-cog fa-lg"></i>
+            <span class="screen-header__icons__dot">
+                <span class="nav__dott"></span>
+                <a href="settings.html">
+                    <i class="fas fa-cog fa-lg"></i>
+                </a>
             </span>
         </div>
     </header>
