--- a/more.html
+++ b/more.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - JiseongTalk</title>
+    <title>More - JiseongTalk</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -23,13 +23,10 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
+        <h1 class="screen-header__title">More</h1>
         <div class="screen-header__icons">
             <span>
                 <i class="fas fa-search fa-lg"></i>
-            </span>
-            <span>
-                <i class="far fa-comment-dots fa-lg"></i>
             </span>
             <span>
                 <i class="fas fa-music fa-lg"></i>
@@ -43,18 +40,46 @@
         </div>
     </header>
     
-    <main class="main-screen">
+    <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
                 <div class="user-component__text">
-                    <h4 class="user-component__title">JiseongTalk</h4>
-                    <h6 class="user-component__subtitle">Please check My Account Info</h6>
+                    <h4 class="user-component__title">JiseongChoi</h4>
+                    <h6 class="user-component__subtitle">+82 10-8406-3995</h6>
                 </div>
             </div>
             <div class="user-component__column">
-                <span class="alert user-component__time">00:00</span>
-                <div class="badge badge-sm">1</div>
+                <i class="far fa-comment-alt fa-2x"></i>
+            </div>
+        </div>
+        <div class="icon-row">
+            <div class="icon-row__icon">
+                <i class="far fa-calendar"></i>
+                <span>Calender</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far fa-smile-beam"></i>
+                <span>Emotions</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="fas fa-paint-roller"></i>
+                <span>Themes</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="fas fa-file-invoice-dollar"></i>
+                <span>Account</span>
+            </div>
+        </div>
+        <div class="more-suggestions">
+            <h4 class="more-suggestions__title">Suggestions</h4>
+            <div class="more-suggestions__icons">
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i>
+                    </div>
+                    <div class="more-suggestions__icon-text">Jiseong Story</div>
+                </div>
             </div>
         </div>
     </main>
@@ -62,16 +87,20 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>          
+                <a class="nav__link" href="friends.html">
+                    <i class="far fa-user fa-2x"></i>
+                </a>          
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fas fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+                <a class="nav__link" href="find.html">
+                    <i class="fas fa-search fa-2x"></i>
+                </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
