--- a/chats.html
+++ b/chats.html
@@ -44,6 +44,7 @@
     </header>
     
     <main class="main-screen">
+        <a href="chat.html">
         <div class="user-component">
             <div class="user-component__column">
                 <img class="user-component-avatar" src="https://avatars3.githubusercontent.com/u/72449074?s=460&u=66847301059d1b12aa48f97e6f428bc99416ddfc&v=4" alt="">
@@ -56,7 +57,8 @@
                 <span class="alert user-component__time">00:00</span>
                 <div class="badge badge-sm">1</div>
             </div>
-        </div>
+            </div>
+        </a>
     </main>
 
     <nav class="nav">
