--- a/friends.html
+++ b/friends.html
@@ -103,6 +103,11 @@
             </li>
         </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
     <script src="javascript/clock.js"></script>
     <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
