--- a/chats.html
+++ b/chats.html
@@ -83,6 +83,11 @@
             </li>
         </ul>
     </nav>
+    <div id="no-mobile">
+            <span>
+                Your screen is too big. ToT
+            </span>
+        </div>
     <script src="javascript/clock.js"></script>
     <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
