--- a/friends.html
+++ b/friends.html
@@ -38,6 +38,11 @@
                 </a>
             </span>
         </div>
+        <div id="no-mobile">
+            <span>
+                Your screen is too big. ToT
+            </span>
+        </div>
     </header>
 
     <a id="friends-display-link" href="">
