--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <input type="submit" value="Log In" />
         <a href="#">Find Jiseong Account or Password</a>
     </form>
+    <div id="no-mobile">
+            <span>
+                Your screen is too big. ToT
+            </span>
+        </div>
     <script src="javascript/clock.js"></script>
     <script src="javascript/battery.js"></script>
     <script src="https://kit.fontawesome.com/0e98215d28.js" crossorigin="anonymous"></script>
